Major update. See detailed description.
- renamed <project-name>.xdk file for consistency
- updated <project-name>.xdk file contents to 3.0.0 spec
- updated and/or added .gitignore that reflects project archive needs
- updated app.json to reflect need for "runtime", "targets" and "keywords"
- cleaned up app.json to remove unused properties
- updated README.md for consistency with other samples
- updated and/or added LICENSE.md for consistency and completeness

--- a/app.json
+++ b/app.json
@@ -1,18 +1,15 @@
 {
-	"repoName":"iotapp-template-devkit-v1",
-	"title":"IoT Devkit v1",
-	"tooltip":"A node.js based app that that demonstrates the fundamental functionality of the of the sensors in the Intel IoT Devkit via mraa or upm.",
-	"description":"A node.js based app that that demonstrates the fundamental functionality of the of the sensors in the Intel IoT Devkit via mraa or upm.",
-	"articleUrl":" ",
-    "screenshotUrl":"",
-    "iconUrl":"",
-	"highlights":[""],
-    "keywords":[""],
-	"visible": true,
-	"apppreview":false,
-	"appName":"demo.IoTDevkitv1",
-	"relname":"4.0.0",
-	"template" : true,
-	"articleUrl" : "https://software.intel.com/en-us/articles/creating-an-app-which-uses-multiple-sensorslcd-led-light-sensor-iot-devkit-v1",
-	"projectTypeName": "com.intel.xdk.projecttype.iotapp"
+  "title":"IoT Devkit v1",
+  "projectTypeName": "com.intel.xdk.projecttype.iotapp",
+  "sample": false,
+  "template": true,
+  "visible" : true,
+  "sortWeight" : "0.0",
+  "repoName":"iotapp-template-devkit-v1",
+  "tooltip":"A node.js based app that that demonstrates the fundamental functionality of the of the sensors in the Intel IoT Devkit via mraa or upm.",
+  "description":"A node.js based app that that demonstrates the fundamental functionality of the of the sensors in the Intel IoT Devkit via mraa or upm.",
+  "articleUrl" : "https://software.intel.com/en-us/articles/creating-an-app-which-uses-multiple-sensorslcd-led-light-sensor-iot-devkit-v1",
+  "keywords" : [""],
+  "targets": ["edison","galileo"],
+  "runtimes": ["node"]
 }
